[metadata]
name = zotify
version = 0.9.2
author = Zotify Contributors
description = A highly customizable music and podcast downloader
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, music, podcast, downloader
licence = Zlib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: zlib/libpng License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Multimedia :: Sound/Audio

[options]
packages = zotify
python_requires = >=3.10
install_requires =
    librespot>=0.0.9
    music-tag@git+https://zotify.xyz/zotify/music-tag
    mutagen
    Pillow
    pwinput
    requests
    tqdm

[options.entry_points]
console_scripts =
    zotify = zotify.__main__:main

[flake8]
# Conflicts with black
ignore = E203
max-line-length = 160
