[metadata]
name = zotify
version = 0.9.4
author = Zotify Contributors
description = A highly customizable music and podcast downloader
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, music, podcast, downloader
licence = Zlib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: zlib/libpng License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Multimedia :: Sound/Audio

[options]
packages = zotify
python_requires = >=3.10
install_requires =
    librespot>=0.0.9
    music-tag@git+https://zotify.xyz/zotify/music-tag
    mutagen
    Pillow
    pwinput
    requests
    tqdm

[options.entry_points]
console_scripts =
    zotify = zotify.__main__:main

[flake8]
max-line-length = 160
ignore =
    E701
    E704
    W503

[mypy]
warn_unused_configs = True

[mypy-librespot.*]
ignore_missing_imports = True

[mypy-music_tag]
ignore_missing_imports = True

[mypy-mutagen.*]
ignore_missing_imports = True

[mypy-pwinput]
ignore_missing_imports = True

[mypy-tqdm]
ignore_missing_imports = True
